# Drive-Manager-for-Linux

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  DriveMgr(new beta).cpp  README.md  SECURITY.md  build_src.sh  command_creation.py  config.conf  setup.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
Architecture/: Analyze_Disk_Space_arc.md  Benchmark_Util_arc.md  Check_File_Sys_arc.md  Clone_Utils_arc.md  Config_arc.md  Drive_Health_arcmd  Encryption_arc.md  Fingerprinting_arc.md  Format_Drive_arc.md  List_Drives_arc.md  List_Partitions_arc.md  Main_arc.md  Main_menu_herlper_arc.md  Metadata_arc.md  MountUtils_arc.md  Overwride_Drive_arc.md  Resize_Drive_arc.md  Side_Functions_arc.md  logger_arc.md
DriveMGR (GUI)/: funktions.cpp  logic.h  main.cpp
DriveMgr/: DriveMgr.cpp
DriveMgr_CLI/: DriveMgr_v0.8.88
DriveMgr_CLI/include/: command_exec.h  drivefunctions.cpp  drivefunctions.h  encrptionFunctions.cpp  encryption.h
DriveMgr_CLI/src/: DriveMgr_experi.cpp  DriveMgr_stable.cpp
DriveMgr_GUI/: CMakeLists.txt  Cargo.toml  Readme2.txt  compile_flags.txt
DriveMgr_GUI/C++-GTK-GUI/src/: Makefile  drives.cpp  drives.h  main.cpp
DriveMgr_GUI/build_src/: build.sh
DriveMgr_GUI/include/: drivefunctions.h  encryption.h  functions.h  gui.h
DriveMgr_GUI/src/: backend_logic.rs  functions.cpp  main.c  main.rs
DriveMgr_TUI/: TUI_test
DriveMgr_TUI/include/: drivefunctions.h
DriveMgr_TUI/src/: DriveMgr_TUI.cpp  TUI  TUI2
launcher/: launcher  launcher.c  launcher.sh
src/: DriveMgr_experi.cpp  DriveMgr_stable.cpp
